SF Primes/src/objects/Clone_Display_Field_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>A list of fields to display for follow-up after destination records have been selected in the Clone Anything app.</description>
    <fields>
        <fullName>Destination_Picklist_Option_Fields__c</fullName>
        <description>This is the list of fields from the Destination object to be listed in the Picklist options. This may need to be added to the Clone Settings Destination Display Fields.</description>
        <inlineHelpText>This is the list of fields from the Destination object to be listed in the Picklist options. This may need to be added to the Clone Settings Destination Display Fields.</inlineHelpText>
        <label>Destination Picklist Option Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>The API Name of the field to be displayed in the Clone Follow-up section.</description>
        <inlineHelpText>The API Name of the field to be displayed in the Clone Follow-up section.</inlineHelpText>
        <label>Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Display_Type__c</fullName>
        <description>Options include &quot;Default&quot; (let Visualforce decide how to display it),&quot;Text&quot; (plain text), &quot;Link&quot; (a hyperlink to the cloned object if it has been inserted), &quot;Picklist&quot; (a select list with options, dependent on Field Display Query).</description>
        <inlineHelpText>Options include &quot;Default&quot; (let Visualforce decide how to display it),&quot;Text&quot; (plain text), &quot;Link&quot; (a hyperlink to the cloned object if it has been inserted), &quot;Picklist&quot; (a select list with options, dependent on Field Display Query).</inlineHelpText>
        <label>Field Display Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field Editable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Header_Text__c</fullName>
        <label>Field Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Options_Query_Clone_Field__c</fullName>
        <description>The cloned object&apos;s field to match the query object&apos;s field.</description>
        <inlineHelpText>The cloned object&apos;s field to match the query object&apos;s field.</inlineHelpText>
        <label>Field Options Query Clone Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Options_Query_Match__c</fullName>
        <description>The query object&apos;s field to match.</description>
        <inlineHelpText>The query object&apos;s field to match.</inlineHelpText>
        <label>Field Options Query Match</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Options_Query_Text__c</fullName>
        <description>The display text field from the Field Options Query (if provided).</description>
        <inlineHelpText>The display text field from the Field Options Query (if provided).</inlineHelpText>
        <label>Field Options Query Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Options_Query_Value__c</fullName>
        <description>The value field from the Field Options Query (if provided).</description>
        <inlineHelpText>The value field from the Field Options Query (if provided).</inlineHelpText>
        <label>Field Options Query Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Options_Query__c</fullName>
        <description>If the Field Display Type requires options (for example, if the Field Display Type is &quot;Picklist&quot;), this query is used to provide the values.</description>
        <inlineHelpText>If the Field Display Type requires options (for example, if the Field Display Type is &quot;Picklist&quot;), this query is used to provide the values.</inlineHelpText>
        <label>Field Options Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide this (display) field but still query the value.</description>
        <inlineHelpText>Hide this (display) field but still query the value.</inlineHelpText>
        <label>Hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_In_Override_Cloning__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This means, when the user clicks override with preferred values button</description>
        <inlineHelpText>This means, when the user clicks override with preferred values button</inlineHelpText>
        <label>Include In Override Cloning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_In_Regular_Cloning__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This means, when user do not click the override with preferred values button</description>
        <inlineHelpText>This means, when user do not click the override with preferred values button</inlineHelpText>
        <label>Include In Regular Cloning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Do_Not_Display_After_Cloning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field will help to check if the field value is displayed in visualforce page after cloning process</description>
        <inlineHelpText>This Field will help to check if the field value is displayed in visualforce page after cloning process</inlineHelpText>
        <label>Override Do Not Display After Cloning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Do_Not_Display_After_Saving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field will help to check if the field value is displayed in visualforce page after saving clones to database</description>
        <inlineHelpText>This Field will help to check if the field value is displayed in visualforce page after saving clones to database</inlineHelpText>
        <label>Override Do Not Display After Saving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regular_Do_Not_Display_After_Cloning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regular Do Not Display After Cloning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regular_Do_Not_Display_After_Saving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regular Do Not Display After Saving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>If the field is a lookup field; this is the Field API Name of the associated relationship object. This currently only affects Picklist fields (to set saved value in the display table).</description>
        <inlineHelpText>If the field is a lookup field; this is the Field API Name of the associated relationship object. This currently only affects Picklist fields (to set saved value in the display table).</inlineHelpText>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_API_Name__c</fullName>
        <description>This field is used to filter the settings and apply them to the object being cloned. For example, if the cloned sObject Type is Case, this field must also be Case so that the override settings are applied to Cases.</description>
        <inlineHelpText>This field is used to filter the settings and apply them to the object being cloned. For example, if the cloned sObject Type is Case, this field must also be Case so that the override settings are applied to Cases.</inlineHelpText>
        <label>sObject API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Clone Display Field Settings</label>
</CustomObject>